Atualiza controlador de carros e especificações do Swagger
