# swagger/v1/swagger.yaml
@@ -4,6 +4,152 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/cars":
+    get:
+      summary: list cars
+      tags:
+      - Cars
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              examples:
+                example_key:
+                  value:
+                    cars:
+                    - id: 1
+                      name: Ford Focus
+                      year: 2022
+                      created_at: '2021-08-10T00:00:00.000Z'
+                      updated_at: '2021-08-10T00:00:00.000Z'
+                      brand_id: 1
+                      model_id: 1
+                    - id: 2
+                      name: Fiat Uno
+                      year: 2022
+                      created_at: '2021-08-10T00:00:00.000Z'
+                      updated_at: '2021-08-10T00:00:00.000Z'
+                      brand_id: 2
+                      model_id: 2
+    post:
+      summary: create car
+      tags:
+      - Cars
+      parameters: []
+      responses:
+        '201':
+          description: car created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                year:
+                  type: integer
+                status:
+                  type: integer
+                brand_id:
+                  type: integer
+                model_id:
+                  type: integer
+              required:
+              - name
+              - year
+              - status
+              - brand_id
+              - model_id
+            examples:
+              '201':
+                summary: 201_response
+                value:
+                  name: Ford Focus
+                  year: 2022
+                  status: 0
+                  brand_id: 1
+                  model_id: 1
+              '422':
+                summary: 422_response
+                value:
+                  name: Ford Focus
+                  year: 2022
+                  status: 0
+                  brand_id: 1
+  "/api/v1/cars/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show car
+      tags:
+      - Cars
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              examples:
+                example_key:
+                  value:
+                    car:
+                      id: 1
+                      name: Ford Focus
+                      year: 2022
+                      brand_id: 1
+                      created_at: '2021-08-10T00:00:00.000Z'
+                      updated_at: '2021-08-10T00:00:00.000Z'
+                      model_id: 1
+    put:
+      summary: update car
+      tags:
+      - Cars
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '204':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                year:
+                  type: integer
+                status:
+                  type: integer
+                brand_id:
+                  type: integer
+                model_id:
+                  type: integer
+              required:
+              - name
+              - year
+              - status
+              - brand_id
+              - model_id
+    delete:
+      summary: delete car
+      tags:
+      - Cars
+      responses:
+        '204':
+          description: successful
   "/api/v1/users":
     get:
       summary: list users
